2022-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c: Add two 'void' for proper prototypes pleasing clang-15

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3
	* .github/workflows/docker.yaml (name): Idem

	* inst/NEWS.Rd: Update on http:// to https://

2022-05-06  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.19
	* configure.ac: Idem
	* configure: Idem

2022-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* src/mutators.cpp: Change seven string to std::string

2022-04-06  Michael Chirico  <chiricom@google.com>

	* R/00classes.R: Additional tests and updated changes
	* R/debug_string.R: Idem
	* R/text_format.R: Idem
	* man/Message-class.Rd: Idem
	* inst/tinytest/test_message.R: Idem

2022-04-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/wrapper_Message.cpp: Correct minor issue, reenable compilation
	* inst/tinytest/test_message.R: Park one test temporarily

2022-04-04  Michael Chirico  <chiricom@google.com>

	* R/00classes.R: Expose TextFormat for Message->character conversion
	* R/debug_string.R: Idem
	* R/text_format.R: Idem
	* src/wrapper_Message.cpp: Idem
	* src/init.c: Idem
	* man/Message-class.Rd: Idem
	* inst/tinytest/test_message.R: Idem

2022-03-23  Dirk Eddelbuettel  <edd@debian.org>

	* R/internals.R (getProtobufLibVersion): If formatted result, return
	as 'package_version()' rather than just string; update .Call()

	* R/zzz.R (.onAttach): In interactive mode disply package and
	underlying library version on startup

2022-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description, SystemRequirements): Updated to state that
	version 3.3.0 from March 2017 or later is now needed

2021-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.18
