@@ -18,7 +18,7 @@ Suggests: tinytest
 SystemRequirements: ProtoBuf libraries and compiler version 3.3.0 or later;
  On Debian/Ubuntu these can be installed as libprotoc-dev, libprotobuf-dev
  and protobuf-compiler, while on Fedora/CentOS protobuf-devel and
- protobuf-compiler are needed.
+ protobuf-compiler are needed. A C++17 compiler is required as well.
 BugReports: https://github.com/eddelbuettel/rprotobuf/issues
 URL: https://github.com/eddelbuettel/rprotobuf, https://dirk.eddelbuettel.com/code/rprotobuf.html
 License: GPL (>= 2)
