@@ -5,8 +5,8 @@ PKG_CPPFLAGS= -I$(RWINLIB)/include
 PKG_LIBS= -L$(RWINLIB)/lib${subst gcc,,${COMPILED_BY}}${R_ARCH} \
 	-L$(RWINLIB)/lib${R_ARCH}${CRT} -lprotobuf
 
-## Make this C++11 so that we get better int64 support and more
-CXX_STD=CXX11
+## Make this C++17 so that clang will not complain about [[nodiscard]] in headers
+CXX_STD=CXX17
 
 all: clean winlibs
 
