@@ -7,6 +7,10 @@
 
 	* inst/NEWS.Rd: Update on http:// to https://
 
+	* src/Makevars.in (CXX_STD): The compilation standard is now C++17
+	* src/Makevars.win (CXX_STD): Idem
+	* DESCRIPTION (SystemRequirements): Stated updated requirement
+
 2022-05-06  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): New release 0.4.19
